fix portrait collapsing on image load

--- a/src/components/userlink/styles.css
+++ b/src/components/userlink/styles.css
@@ -16,7 +16,8 @@
 
 .img-user-link {
   width: 9em;
-  height: auto;
+  height: 9em;
+  object-fit: cover;
   align-self: center;
   border-radius: 50%;
   border: 1px solid var(--accent1);
